--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,21 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/customer">customer</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin">admin</a>
+          </li>
+
     <li class="nav-item">
     <a class="nav-link" routerLink="/login">Login</a>
     </li>
     <li class="nav-item">
     <a class="nav-link" routerLink="/register">Register</a>
     </li>
+
     </ul>
     </div>
    </nav>
